trying to import products from JSON

--- a/project/index.html
+++ b/project/index.html
@@ -122,10 +122,11 @@
     </header>
 
     <main>
-      <section id="main-container"></section>
+  <section id="main-container">
+    <div id="products-container"></div>
+  </section>
+</main>
 
-      <!-- pärast route lisamist kustutame teised sektsioonid ja otsime üles ainult main-container'i -->
-    </main>
 
     <!-- JavaScripti mooduli laadimine -->
     <script type="module" src="./index.js"></script>
