--- a/project/index.html
+++ b/project/index.html
@@ -5,34 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>E-Store</title>
-    <style>
-      /* Lisa CSS, et kuvada eri vaated, kategooriate filter, ostukorv ja lemmikud */
-      body {
-        font-family: Arial, sans-serif;
-      }
-      .header {
-        display: flex;
-        justify-content: space-between;
-        padding: 10px;
-        background-color: #fbcde4;
-      }
-
-      #main-container {
-        background-color: rgb(247, 124, 165);
-        padding: 50px;
-      }
-
-      .product {
-        border: 2px solid black;
-        width: max-content;
-        padding: 10px;
-      }
-
-      .products-container {
-        display: grid;
-        grid-auto-flow: column;
-      }
-    </style>
+  
   </head>
   <body>
     <header class="header">
@@ -129,6 +102,6 @@
 
 
     <!-- JavaScripti mooduli laadimine -->
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
